# tex2text

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tex2text/: __init__.py  jsonc.py  tex2text-props.jsonc  tex2text.py  tex_command.py  tex_environment.py  tex_eq.py  tool.py
src/tex2text/script/: cktex2text.py  tex2text.py
tests/: output.txt  sample.tex  test.sh
